hide text overflow to avoid creating extra scrollbars

--- a/src/Xword.css
+++ b/src/Xword.css
@@ -43,6 +43,7 @@
   width: 4vh;
   height: 4vh;
   user-select: none;
+  overflow: hidden;
 }
 
 .xwordjs-cell-circled {
